--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.1, 8.2, 8.3, 8.4]
+        php: [8.1, 8.2, 8.3, 8.4, 8.5]
         laravel: [10, 11, 12]
         include:
           - php: '8.0'
@@ -39,6 +39,10 @@ jobs:
             laravel: 12
           - php: 8.4
             laravel: 10
+          - php: 8.5
+            laravel: 10
+          - php: 8.5
+            laravel: 11
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
