chore: updated provider
Signed-off-by: Elvis Yerel Roman <yerel9212@yahoo.es>

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "laravel/horizon",
-    "description": "Dashboard and code-driven configuration for Laravel queues.",
+    "name": "elyerr/horizon",
+    "description": "Dashboard and code-driven configuration for Laravel queues with CSP support",
     "keywords": ["laravel", "queue"],
     "license": "MIT",
     "authors": [
